--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Fence & Retain Co. All rights reserved.</p>
+            <p>&copy; 2024 Brick & Woods Construction Pty Ltd. All rights reserved.</p>
         </div>
     </footer>
 </body>
